// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperatorsListItem component will render with full properties 1`] = `
"<li class="flex items-center gap-3">
  <figure class="min-w-[64px] min-h-[64px] text-center"><img class="rounded-lg" src="https://logo.com/logo/64x64" width="64px" height="64px" alt=""></figure>
  <article class="grow space-y-2">
    <!-- Title -->
    <div class="flex gap-2 items-center"><a id="a-dive-shop" data-testid="select-a-dive-shop" class="text-2xl capitalize" href="#a-dive-shop">A Dive Shop</a>
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="text-sm text-pretty">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div class="overflow-x-auto space-y-3 line-clamp-4">
        <p>Dive shop with a boat</p>
      </div>
      <!--v-if-->
    </div>
    <address class="text-sm space-y-3">
      <div>
        <div class="flex gap-2"><span><i class="fa-solid fa-map-marker-alt"></i></span><label class="sr-only">Address</label>
          <p class="flex flex-col"><span>123 Street St.</span><span>1, -1</span></p>
        </div>
      </div>
      <div class="flex flex-wrap *:mr-6 items-baseline">
        <div class="flex gap-2"><span><i class="fa-solid fa-phone"></i></span><label class="sr-only">Phone</label><a href="tel:1 (111) 111-1111">1 (111) 111-1111</a></div>
        <div class="flex gap-2"><span><i class="fa-solid fa-envelope"></i></span><label class="sr-only">Email</label><a>email@email.org</a></div>
        <div class="flex gap-2"><span><i class="fa-solid fa-globe"></i></span><label class="sr-only">Website</label><a class="space-x-1" href="https://site.com" target="_blank"><span>https://site.com</span><span><i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></span></a></div>
      </div>
      <div class="flex flex-wrap items-baseline *:mr-6">
        <div class="flex gap-2"><span><i class="fa-brands fa-facebook"></i></span><label class="sr-only">Facebook</label><a href="https://www.facebook.com/facebook" target="_blank">facebook</a></div>
        <div class="flex gap-2"><span><i class="fa-brands fa-instagram"></i></span><label class="sr-only">Instagram</label><a href="https://www.instagram.com/instagram/" target="_blank">instagram</a></div>
        <div class="flex gap-2"><span><i class="fa-brands fa-tiktok"></i></span><label class="sr-only">TikTok</label><a href="https://www.tiktok.com/@tiktok" target="_blank">tiktok</a></div>
        <div class="flex gap-2"><span><i class="fa-brands fa-x-twitter"></i></span><label class="sr-only">X / Twitter</label><a href="https://x.com/omg_elon_sucks" target="_blank">omg_elon_sucks</a></div>
        <div class="flex gap-2"><span><i class="fa-brands fa-youtube"></i></span><label class="sr-only">Youtube</label><a href="https://www.youtube.com/@youtube" target="_blank">youtube</a></div>
      </div>
    </address>
  </article>
  <!--v-if-->
</li>"
`;

exports[`OperatorsListItem component will render with minimal properties 1`] = `
"<li class="flex items-center gap-3">
  <figure class="min-w-[64px] min-h-[64px] text-center"><i class="fa-solid fa-image fa-3x"></i></figure>
  <article class="grow space-y-2">
    <!-- Title -->
    <div class="flex gap-2 items-center"><a id="a-dive-shop" data-testid="select-a-dive-shop" class="text-2xl capitalize" href="#a-dive-shop">A Dive Shop</a>
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="text-sm text-pretty">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div class="overflow-x-auto space-y-3 line-clamp-4">
        <p>Dive shop with a boat</p>
      </div>
      <!--v-if-->
    </div>
    <address class="text-sm space-y-3">
      <div>
        <div class="flex gap-2"><span><i class="fa-solid fa-map-marker-alt"></i></span><label class="sr-only">Address</label>
          <p class="flex flex-col"><span>123 Street St.</span>
            <!--v-if-->
          </p>
        </div>
      </div>
      <div class="flex flex-wrap *:mr-6 items-baseline">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex flex-wrap items-baseline *:mr-6">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </address>
  </article>
  <!--v-if-->
</li>"
`;
